--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,15 @@
+section.main3 ul li{list-style-type:none}
+section.main4 ul li{list-style-type:none}
+section.main3 {display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;min-height:40vh;animation:fadeInUp .8s}
+section.main3 img{width:180px;height:180px;border-radius:100%;object-fit:cover;border:8px solid #21222b93;cursor:pointer;margin-top:10px}
+section.main3 span{color:#fffffe;font-size:30px;font-weight:700}
+section.main3 p{position:relative;top:50%;border-right:2px solid rgba(255,255,255,.75);white-space:nowrap;overflow:hidden;color:#94a1b2;font-size:13px;animation:typewriter 4s steps(44) 1s 1 normal both,blinkTextCursor 530ms steps(44) infinite normal}
+section.main3 ul{display:flex;flex-direction:row;align-items:center;justify-content:center;text-align:center}
+section.main3 ul li a{color:#a6a8b8;display:flex;text-decoration:none;margin:20px 5px;font-size:25px;padding:5px;transition:.2s all}
+section.main3 ul li a:hover{transition:.2s all;color:#fff}section.main2 ul{display:flex;flex-direction:row;align-items:center;justify-content:center;text-align:center;animation:fadeInUp .8s}
+section.main4 ul li a{color:#a6a8b8;display:flex;text-decoration:none;margin:0 10px;font-size:25px;padding:5px;transition:.2s all}
+section.main4 ul li a:hover{transition:.2s all;color:#fff}::-webkit-scrollbar,::-webkit-scrollbar{width:0;height:0}
+
 /* Custom scrollbar untuk browser berbasis WebKit (Chrome, Edge, Safari) */
 ::-webkit-scrollbar {
   width: 12px;
