--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap);
+
 *,*::before,*::after{
 padding:0;
 margin:0;
@@ -61,7 +62,8 @@ cursor:pointer}@media only screen and (max-width:630px){
 header nav{
 display:flex;
 flex-direction:column
-}}@media only screen and (max-width:320px){
+}}
+@media only screen and (max-width:320px){
 header nav .header_links ul{
 display:flex;
 justify-content:center;
