--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ height:100%
 
 body {
 display: flex;
-flex-direction: column;
+flex-direction: center;
 align-items:center;
 font-size:4rem;
 overflow:hidden
